# CFakeMicWavPlayer

./: .travis.yml  CFakeMicWavPlayerLib.cpp  README.md  meson.build
include/: CFakeMicWavPlayerLib.h
pkg-config/: cfakemicwavplayer.pc
tests/: main.c  meson.build
